<resources>
    <string name="app_name">The Movie Db Application</string>
    <string name="movie_item_bgr">Movie item background</string>
    <string name="trending_item_today">Today</string>
    <string name="trending_item_week">This week</string>
    <string name="trending_label">Trending</string>
    <string name="upcoming_trailers_label">Upcoming Trailers</string>
    <string name="trending_bgr">trending_bgr</string>
    <string name="header_poster">Header poster</string>
    <string name="oscars_bgr">oscars_bgr</string>
    <string name="view_the_winners">View the winners\ </string>
    <string name="oscar_title">Oscar title</string>
    <string name="welcome">Welcome.</string>
    <string name="welcome_title">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="search_hint">Search for movies, TV shows, people…</string>
    <string name="search">Search</string>
    <string name="movie_name_eg">Biệt Đội Săn Ma: Kỷ Nguyên Băng Giá</string>
    <string name="release_date_eg">Mar 20, 2024</string>
    <string name="rate_value_eg">80</string>
    <string name="trailer_filter_layer">filter layer</string>
    <string name="trailer_bgr">trailer background</string>
    <string name="trailer_play_icon">trailer play icon</string>
    <string name="trailer_title">Hành Tinh Khỉ: Vương Quốc Mới</string>
    <string name="trailer_description">Trailer #1</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now playing</string>
    <string name="top_rated">Top rated</string>
    <string name="movies">Movies</string>
    <string name="see_all">See all\ </string>
    <string name="airing_today">Airing today</string>
    <string name="onTv">On TV</string>
    <string name="logo">Logo</string>
    <string name="tv_shows">TV shows</string>
    <string name="all_movies">All Movies</string>
    <string name="icon_more">Icon more</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="page_number">1</string>
</resources>