<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_trailer_item"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/iv_trailer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/trailer_bgr"
                android:contentDescription="@string/trailer_bgr" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_play_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:translationZ="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/glyphicons_basic_play_white"
            android:contentDescription="@string/trailer_play_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_trailer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/trailer_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_trailer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/trailer_description"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center" />

</LinearLayout>