<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivHeaderPoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/header_poster"
                android:scaleType="centerCrop"
                android:src="@drawable/header_bgr"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivOscarsBgr"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:contentDescription="@string/oscars_bgr"
                android:src="@drawable/oscar_bgr"
                app:layout_constraintBottom_toBottomOf="parent" />

            <LinearLayout
                android:id="@+id/llHeaderContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWelcomeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/welcome_title"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSearch"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        app:layout_constraintTop_toTopOf="@+id/etSearch"
                        app:layout_constraintBottom_toBottomOf="@+id/etSearch"
                        app:layout_constraintEnd_toEndOf="@+id/etSearch"
                        android:text="@string/search"
                        android:focusable="true"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@color/white"
                        android:background="@drawable/rounded_bgr_search" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/rounded_white_bgr"
                        android:hint="@string/search_hint"
                        android:paddingStart="15dp"
                        android:paddingEnd="100dp"
                        android:textSize="11sp"
                        android:textColor="@color/gray_rgba"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="20dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ivOscarsTitle"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:contentDescription="@string/oscar_title"
                android:scaleType="fitCenter"
                android:src="@drawable/oscars_2024_title"
                app:layout_constraintBottom_toBottomOf="@id/ivOscarsBgr"
                app:layout_constraintStart_toStartOf="@+id/ivOscarsBgr"
                app:layout_constraintTop_toTopOf="@+id/ivOscarsBgr" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewWinners"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/rounded_outline_transparent_white_button_bgr"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="src_atop"
                android:drawableEnd="@drawable/glyphicons_basic_830_arrow_thin_right_white"
                android:paddingHorizontal="16dp"
                android:text="@string/view_the_winners"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/ivOscarsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivOscarsTitle"
                app:layout_constraintTop_toTopOf="@+id/ivOscarsTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/trending_section"
            layout="@layout/movies_section_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivTrailerBgr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/trailer_bgr"
                android:scaleType="centerCrop"
                android:contentDescription="@string/trailer_bgr" />

            <ImageView
                android:id="@+id/ivTrailerFilterLayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="#cc032541"
                android:contentDescription="@string/trailer_filter_layer" />

            <TextView
                android:id="@+id/tvUpcomingTrailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/upcoming_trailers_label"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvUpcomingTrailers" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/all_movie_section"
            layout="@layout/movies_section_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <include
            android:id="@+id/tv_show_section"
            layout="@layout/movies_section_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <include layout="@layout/footer" />

    </LinearLayout>

</ScrollView>
