<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AllMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_movies"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:paddingVertical="12dp"
            android:background="@color/tmdbDarkBlue"
            android:textColor="@android:color/white" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlMovies"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/trending_tab_layout_transparent"
            app:tabGravity="center"
            app:tabIndicator="@drawable/trending_tab_indicator_bgr"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="stretch"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="#1ed5a9"
            app:tabTextAppearance="@style/CustomTabTextAppearance"
            app:tabTextColor="@android:color/black">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:layout_margin="10dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:id="@+id/tvPageNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/page_number"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_margin="10dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <include layout="@layout/footer" />

    </LinearLayout>

</ScrollView>