<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_marginTop="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivTrailerBgr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/trailer_bgr"
        android:scaleType="centerCrop"
        android:contentDescription="@string/trailer_bgr" />

    <ImageView
        android:id="@+id/ivTrailerFilterLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#cc032541"
        android:contentDescription="@string/trailer_filter_layer" />

    <TextView
        android:id="@+id/tvUpcomingTrailers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/upcoming_trailers_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrailers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvUpcomingTrailers" />

</androidx.constraintlayout.widget.ConstraintLayout>