<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:layout_centerInParent="true"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="12dp"
    android:padding="4dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bgr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_item_bgr"
                android:scaleType="centerCrop"
                android:src="@drawable/poster" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ivMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/glyphicons_basic_947_circle_more_white"
            android:translationZ="2dp"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            android:contentDescription="@string/icon_more" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="8dp"
            android:text="@string/movie_name_eg"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/release_date_eg"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpiRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/cpi_rating_bgr_black"
            android:progress="80"
            android:translationY="20dp"
            android:translationZ="2dp"
            app:indicatorColor="@color/tmdbLightGreen"
            app:indicatorInset="2dp"
            app:indicatorSize="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:trackColor="#44ffffff"
            app:trackCornerRadius="1000dp"
            app:trackThickness="3dp" />

        <TextView
            android:id="@+id/tvRatingValue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/rate_value_eg"
            android:textColor="@color/tmdbLightGreen"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationY="20dp"
            android:translationZ="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/cpiRating"
            app:layout_constraintEnd_toEndOf="@+id/cpiRating"
            app:layout_constraintStart_toStartOf="@+id/cpiRating"
            app:layout_constraintTop_toTopOf="@+id/cpiRating" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>