<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="310dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:cardCornerRadius="12dp"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bgr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_item_bgr"
            android:scaleType="centerCrop"
            android:src="@drawable/poster" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="8dp"
        android:text="@string/movie_name_eg"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/release_date_eg"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpiRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        android:layout_marginEnd="14dp"
        android:translationY="20dp"
        android:translationZ="2dp"
        android:progress="80"
        android:background="@drawable/cpi_rating_bgr_black"
        app:indicatorColor="@color/tmdbLightGreen"
        app:trackThickness="3dp"
        app:trackColor="#44ffffff"
        app:indicatorSize="40dp"
        app:trackCornerRadius="1000dp"
        app:indicatorInset="2dp" />

    <TextView
        android:id="@+id/tvRatingValue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/rate_value_eg"
        app:layout_constraintTop_toTopOf="@+id/cpiRating"
        app:layout_constraintBottom_toBottomOf="@+id/cpiRating"
        app:layout_constraintEnd_toEndOf="@+id/cpiRating"
        app:layout_constraintStart_toStartOf="@+id/cpiRating"
        android:gravity="center"
        android:textColor="@color/tmdbLightGreen"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        android:translationY="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>