<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMoviesSection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBgr"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/trending_bg"
        android:contentDescription="@string/trending_bgr"
        android:scaleX="3"
        android:scaleY="2"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/movies"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tlMovies"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlMovies"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0"
        android:background="@drawable/trending_tab_layout_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:tabGravity="center"
        app:tabIndicator="@drawable/trending_tab_indicator_bgr"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="stretch"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#1ed5a9"
        app:tabTextAppearance="@style/CustomTabTextAppearance"
        app:tabTextColor="@android:color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemExample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tlMovies" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/popular_tab_indicator_bgr"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="src_atop"
        android:drawableEnd="@drawable/arrow_right_black"
        android:paddingHorizontal="16dp"
        android:text="@string/see_all"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvMovies" />

</androidx.constraintlayout.widget.ConstraintLayout>
